@@ -1,0 +1,14 @@
+language: php
+
+php:
+    - 7.1
+    - 7.2
+    - 7.3
+    - 7.4
+
+before_script:
+    - composer self-update
+    - composer install --prefer-source --no-interaction --dev
+
+script:
+    - vendor/bin/phpunit vendor\\apphp\\laravel-datagrid\\tests\\TestDataGridMessage.php
